# flask-chat-app

./: .gitignore  pyproject.toml  start_dev_server  start_server
flask_chat_app/: app.py  broken_app.py
flask_chat_app/static/css/: globals.css
flask_chat_app/templates/: index.html  login.html  register.html
