[tool.poetry]
name = "flask-chat-app"
version = "0.1.0"
description = ""
authors = ["Youssef Atta'i <youssefgalalnazem@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_chat_app"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-socketio = "^5.3.4"
flask-login = "^0.6.2"
flask-cors = "^4.0.0"
simple-websocket = "^0.10.1"
dnspython = "^2.3.0"
pymongo = "^4.4.0"
eventlet = "^0.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
